Fixed overflowing text on gallery page

--- a/korus-portfolio/public/css/style.css
+++ b/korus-portfolio/public/css/style.css
@@ -462,6 +462,7 @@ footer{
     margin-top:10px;
     margin-bottom:0px;
     padding:0;
+    overflow: hidden;
 }
 .galeriak {
     float:left;
